...
    <string name="expiry_title">Expiry</string>
    <string name="cvc_title">CVC</string>
    <string name="deposit_title">Deposit</string>
    <string name="holder_name_default_value">John Galt</string>
    <string name="expiration_date_default_value">12/24</string>
    <string name="back_title">Back</string>
    <string name="next_title">Next</string>
    <string name="submit_title">Submit</string>
    <string name="expiration_date_title">Expiration date</string>
    <string name="expiration_date_default_placeholder">MM/YY</string>
    <string name="card_owner_default_value">Card owner(Name on the card)</string>
    <string name="apply_divider_title">Apply Divider</string>
    <string name="add_brand_title">Add brand</string>
    <string name="override_brand_title">Override brand</string>
...
