...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconGravity="start"
            app:icon="@drawable/ic_arrow_left"
            android:textColor="@android:color/white"
            android:textSize="@dimen/vgs_field_text_size"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconGravity="end"
            app:icon="@drawable/ic_arrow_right"
            android:textColor="@android:color/white"
            android:textSize="@dimen/vgs_field_text_size"
...
