<resources>
    <string name="sdk_name">VGSCollect</string>
    <string name="error_divider_mask">Divider for number can\'t be # or \\ symbol.</string>
    <string name="error_output_divider_mask">Output divider for number can\'t be # or \\ symbol.</string>
    <string name="error_divider_count_number_field">Divider for number can\'t be greater than 1 symbol.</string>
    <string name="error_divider_number_field">Divider for number can\'t be a digit.</string>
    <string name="error_output_divider_number_field">Output divider for number can\'t be a digit.</string>
    <string name="error_output_divider_count_number_field">Divider for number can\'t be greater than 1 symbol.</string>
    <string name="error_custom_brand_mask_length">The mask and card number maximum length are not equal for %1$s brand.</string>
    <string name="error_custom_host_wrong">A specified host: %1$s was not correct. Looks like you don\'t activate cname for Collect SDK on the Dashboard.</string>
    <string name="error_custom_host_wrong_short">A specified host is not correct.</string>

    <string name="vgs_date_picker_title" />
    <string name="vgs_date_picker_positive_button">Done</string>
    <string name="vgs_date_picker_negative_button">Cancel</string>

    <string name="card_number_digits">0123456789</string>
    <string name="validation_regex_person">^[a-zA-Z0-9 ,\'.-]+$</string>
</resources>
